# aboba-vocoder

./: CMakeLists.txt  LICENSE  README.md
cmake/: AbobaArch.cmake
docs/: INTEGRATION.md
examples/: adversarial_test.cpp  c_abi_test.c  debug_test.cpp  dynamic_test.cpp  hybrid_test.cpp  info.cpp  inspect.cpp  pitch_shift.cpp  quality_test.cpp  realtime_voice.cpp  stream_file.cpp  stress_test.cpp  vulkan_test.cpp
include/: aboba_c.h
include/aboba/: auto_config.hpp  autotune.hpp  backend.hpp  debug.hpp  dsp_blocks.hpp  formant_vocoder.hpp  health.hpp  hybrid_backend.hpp  lowlatency.hpp  mock_backend.hpp  musical_scale.hpp  noise_reduction.hpp  paranoia.hpp  phase_vocoder.hpp  pipeline.hpp  pitch_corrector.hpp  platform.hpp  quality.hpp  realtime.hpp  reverb.hpp  self_check.hpp  stft.hpp  streaming.hpp  sysinfo.hpp  voice_character.hpp  voice_config.hpp  vulkan_backend.hpp  yin.hpp
python/: README.md  aboba_py.cpp  test_bindings.py
shaders/: bitrev_permute.comp  c2r_finish.comp  compile_shaders.sh  fft_stage.comp  r2c_pack.comp
src/: aboba_c.cpp  autotune.cpp  debug.cpp  formant_vocoder.cpp  health.cpp  hybrid_backend.cpp  lowlatency.cpp  mock_backend.cpp  musical_scale.cpp  noise_reduction.cpp  phase_vocoder.cpp  pipeline.cpp  pitch_corrector.cpp  platform.cpp  realtime.cpp  reverb.cpp  self_check.cpp  stft.cpp  streaming.cpp  sysinfo.cpp  voice_character.cpp  voice_config.cpp  vulkan_backend.cpp  yin.cpp
src/backend/: cpu_backend.cpp  factory.cpp  hip_backend.cpp
src/vulkan_shaders_gen/: bitrev_permute.h  bitrev_permute.spv  c2r_finish.h  c2r_finish.spv  fft_stage.h  fft_stage.spv  r2c_pack.h  r2c_pack.spv
vst3_wrapper/: AbobaVST3Controller.cpp  AbobaVST3Controller.h  AbobaVST3Factory.cpp  AbobaVST3Processor.cpp  AbobaVST3Processor.h  CMakeLists.txt  README.md
